# 2D_TOPDOWN_MMORPG_BOILERPLATE

./: .gitattributes  .gitignore  README.md  h origin main --force
docs/: LINE_BY_LINE_GUIDE.md
include/: Data.h  Game.h
mmorpg_boilerplate_v1/: .gitignore
mmorpg_boilerplate_v1.1.0/: CMakeLists.txt  README.md
mmorpg_boilerplate_v1.1.0/include/: Types.h  World.h
mmorpg_boilerplate_v1.1.0/src/: Data.cpp  World.cpp
mmorpg_boilerplate_v1/include/: World.h
mmorpg_boilerplate_v1/src/: Data.cpp  World.cpp
mmorpg_boilerplate_v2.0.1/: README.md
mmorpg_boilerplate_v2.0.1/include/: Game.h  World.h
mmorpg_boilerplate_v2.0.1/src/: Data.cpp  World.cpp
mmorpg_boilerplate_v2.1.0/: README.md
mmorpg_boilerplate_v2.1.0/include/: Types.h  World.h
mmorpg_boilerplate_v2.1.0/src/: Data.cpp  World.cpp  main.cpp
mmorpg_boilerplate_v2.2.0/client/: CMakeLists.txt
mmorpg_boilerplate_v2.2.0/client/src/: Game.cpp  Game.h  NetworkClient.cpp  NetworkClient.h
mmorpg_boilerplate_v2.2.0/include/: Types.h  World.h
mmorpg_boilerplate_v2.2.0/server/: CMakeLists.txt
mmorpg_boilerplate_v2.2.0/server/src/: main.cpp
mmorpg_boilerplate_v2.2.0/shared/: Protocol.h
mmorpg_boilerplate_v2.2.0/src/: Data.cpp  Game.cpp  World.cpp
mmorpg_boilerplate_v2.3.0 -working/: CMakeLists.txt
mmorpg_boilerplate_v2.3.0 -working/client/: CMakeLists.txt
mmorpg_boilerplate_v2.3.0 -working/client/include/core/: Game.h  Types.h
mmorpg_boilerplate_v2.3.0 -working/client/include/world/: World.h
mmorpg_boilerplate_v2.3.0 -working/client/src/: main.cpp
mmorpg_boilerplate_v2.3.0 -working/client/src/core/: Game.cpp
mmorpg_boilerplate_v2.3.0 -working/client/src/world/: World.cpp
mmorpg_boilerplate_v2.3.0 -working/docs/: NOTES.md
mmorpg_boilerplate_v2.3.0 -working/server/: CMakeLists.txt
mmorpg_boilerplate_v2.3.0 -working/server/src/: main.cpp
mmorpg_boilerplate_v3/: README.md
mmorpg_boilerplate_v3.1.0/client/include/core/: Game.h  Types.h
mmorpg_boilerplate_v3.1.0/client/include/net/: NetworkClient.h
mmorpg_boilerplate_v3.1.0/client/include/world/: World.h
mmorpg_boilerplate_v3.1.0/client/src/: main.cpp
mmorpg_boilerplate_v3.1.0/client/src/core/: Game.cpp
mmorpg_boilerplate_v3.1.0/client/src/net/: NetworkClient.cpp
mmorpg_boilerplate_v3.1.0/client/src/world/: Data.cpp  World.cpp
mmorpg_boilerplate_v3.1.0/server/: CMakeLists.txt
mmorpg_boilerplate_v3.1.0/server/src/: main.cpp
mmorpg_boilerplate_v3.1.0_deployable/client/include/core/: Game.h
mmorpg_boilerplate_v3.1.0_deployable/client/src/core/: Game.cpp
mmorpg_boilerplate_v3.1.1/: client_config.txt
mmorpg_boilerplate_v3.1.1/client/: CMakeLists.txt
mmorpg_boilerplate_v3.1.1/client/include/core/: Types.h
mmorpg_boilerplate_v3.1.1/client/include/game/: QuestSystem.h
mmorpg_boilerplate_v3.1.1/client/include/world/: Quest.h  QuestEvent.h  QuestState.h  QuestSystem.h  World.h
mmorpg_boilerplate_v3.1.1/data/: quests.json
mmorpg_boilerplate_v3.1.1/shared/: QuestTypes.h
mmorpg_boilerplate_v3.1.2/client/: CMakeLists.txt
mmorpg_boilerplate_v3.1.3/shared/: QuestTypes.h
mmorpg_boilerplate_v3.1.4/: .gitignore  CLEANUP_NOTES.txt  CMakeLists.txt  README.md
mmorpg_boilerplate_v3.1.4/client/: ARCHITECTURE.md  CMakeLists.txt
mmorpg_boilerplate_v3.1.4/client/include/core/: Types.h
mmorpg_boilerplate_v3.1.4/client/include/gameplay/: InventorySystem.h  ItemFactory.h  QuestRuntimeSystem.h  ShopSystem.h
mmorpg_boilerplate_v3.1.4/client/include/world/: Data.h  World.h
mmorpg_boilerplate_v3.1.4/client/src/: main.cpp
mmorpg_boilerplate_v3.1.4/client/src/gameplay/: InventorySystem.cpp  ItemFactory.cpp  QuestRuntimeSystem.cpp  ShopSystem.cpp
mmorpg_boilerplate_v3.1.4/client/src/net/: NetworkClient.cpp
mmorpg_boilerplate_v3.1.4/client/src/ui/: DialogueUI.cpp  EquipmentUI.cpp
mmorpg_boilerplate_v3.1.4/client/src/world/: World.cpp  WorldUI.cpp  World_Actors.cpp  World_Choice.cpp  World_Combat.cpp  World_Draw.cpp  World_Gameplay.cpp  World_Interaction.cpp  World_Render.cpp
mmorpg_boilerplate_v3.1.4/shared/: Protocol.h
mmorpg_boilerplate_v3.1.5/: DROP_IN_NOTES.txt  RESTRUCTURE_NOTES.txt
mmorpg_boilerplate_v3.1.5/docs/: NOTES.md
mmorpg_boilerplate_v3.1.6/: split-world.ps1
mmorpg_boilerplate_v3.1.6/client/: CMakeLists.txt
mmorpg_boilerplate_v3.1.6/docs/: MIGRATION_MAP.md
mmorpg_boilerplate_v3.1.7/client/: ARCHITECTURE.md  CMakeLists.txt
mmorpg_boilerplate_v3.1.7/client/archive/legacy_duplicates/: World_Render.cpp
mmorpg_boilerplate_v3.1.7/client/include/core/: Types.h
mmorpg_boilerplate_v3.1.7/client/include/game/render/: UIRenderer.h
mmorpg_boilerplate_v3.1.7/client/include/game/systems/: GameServices.h
mmorpg_boilerplate_v3.1.7/client/include/game/ui/: UIController.h  UIState.h
mmorpg_boilerplate_v3.1.7/client/include/game/world/: World.h
mmorpg_boilerplate_v3.1.7/client/include/ui/windows/: DialogueUI.h
mmorpg_boilerplate_v3.1.7/client/src/app/: main.cpp
mmorpg_boilerplate_v3.1.7/client/src/game/render/: UIRenderer.cpp
mmorpg_boilerplate_v3.1.7/client/src/game/systems/: InventorySystem.cpp  ItemFactory.cpp  ShopSystem.cpp
mmorpg_boilerplate_v3.1.7/client/src/game/ui/: UIController.cpp
mmorpg_boilerplate_v3.1.7/client/src/game/world/: Data.cpp  World_Actors.cpp  World_Choice.cpp  World_Combat.cpp  World_UI.cpp  World_Update.cpp
mmorpg_boilerplate_v3.1.7/client/src/ui/: QuestUI.cpp
mmorpg_boilerplate_v3.1.7/client/src/ui/windows/: DialogueUI.cpp
mmorpg_boilerplate_v3.1.7/data/: quests.json
mmorpg_boilerplate_v3.1.7/server/src/: main.cpp
mmorpg_boilerplate_v3/client/: CMakeLists.txt
mmorpg_boilerplate_v3/client/include/core/: Game.h
mmorpg_boilerplate_v3/client/include/net/: NetworkClient.h
mmorpg_boilerplate_v3/client/include/world/: World.h
mmorpg_boilerplate_v3/client/src/core/: Game.cpp
mmorpg_boilerplate_v3/client/src/net/: NetworkClient.cpp
mmorpg_boilerplate_v3/client/src/world/: World.cpp
mmorpg_boilerplate_v3/docs/: NOTES.md
mmorpg_boilerplate_v3/server/src/: main.cpp
mmorpg_boilerplate_v3/shared/: Protocol.h
src/: Data.cpp  Game.cpp
(+59 files in other folders)
